--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 150px;
+    margin: 0 200px;
 }
 .nav-tittle{
     color: #181818;
@@ -102,4 +102,50 @@ main{
 }
 .about-info{
     text-align: center;
+}
+.info-title{
+    color:#757575 ;
+}
+.info-description{
+    font-weight: bold;
+}
+/* skills related container */
+.skills-container{
+    display: flex;
+    gap: 20px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 6px 50px 0px rgba(102, 51, 153,0.1);
+}
+.skill-description{
+    color: #757575;
+}
+
+/* resume section styles */
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-institute{
+    font-size: 20px;
+}
+.resume-item-institute, .resume-item-description{
+    color:#757575 ;
+}
+.resume-container hr{
+    margin: 20px 50px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
