--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,13 @@ main{
     font-weight: 700;
     margin-bottom: 10px;
 }
+
+
+/* footer style */
+
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
