--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ header{
 }
 .banner .profile{
     width: 500px;
-    margin-bottom: ;
     height: 500px;
 }
 .banner-greeting{
@@ -155,7 +154,24 @@ main{
 
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
     margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.secial-links a{
+    margin-right: 24px;
+}
+.contact input[type="text"], .contact input[type="email"] ,textarea{
+    display:block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    font-size: 15px;
+    border: 0;
+    width: 100%;
+    color: #757575;
+    border-radius: 5px;
 }
