--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,10 @@ nav a{
 /* Header Releted Style */
 header{
     background: #ffffff;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right,top left;
+
 
 }
 .banner{
@@ -58,7 +59,7 @@ header{
 }
 .banner .profile{
     width: 500px;
-    height: 500px;
+    height: 600px;
 }
 .banner-greeting{
     font-size: 45px;
